--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -874,7 +874,24 @@ main {
   border-radius: inherit;
 }
 
+.download-cv {
+  text-align: center;
+  margin-top: 20px;
+}
 
+.download-cv-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff; 
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.download-cv-btn:hover {
+  background-color: #0056b3; /* Cor de fundo do botão no hover */
+}
 
 
 
